--- a/src/main/resources/templates/question/view.html
+++ b/src/main/resources/templates/question/view.html
@@ -15,6 +15,8 @@
     <title>BTL WEB</title>
     <script src="/public/js/viewquestion.js"></script>
     <link th:replace="~{fragments/styles}">
+    <link rel="stylesheet" href="/public/css/viewQuestion.css">
+
 </head>
 <body class="d-flex flex-column h-100">
 <header>
@@ -77,10 +79,10 @@
                                     <div class="question-body" th:text="${question.content}"></div>
                                     <div th:if="${!question.questionPic.isEmpty() }">
                                         <div th:each="pic : ${question.questionPic}">
-                                            <img class=" rounded float-left"
+                                            <img class="popup rounded float-left"
                                                  style="width:150px; height=150px"
                                                  th:src="@{${'https://btlwebhd.s3.ap-southeast-2.amazonaws.com/' + pic}}"
-                                                 >
+                                            >
                                         </div>
                                     </div>
                                 </div>
@@ -156,7 +158,7 @@
                                             <img class=" rounded float-left"
                                                  style="width:150px; height=150px"
                                                  th:src="@{${'https://btlwebhd.s3.ap-southeast-2.amazonaws.com/' + pic}}"
-                                                 >
+                                            >
                                         </div>
                                     </div>
                                     <a sec:authorize='isAuthenticated()'
@@ -209,7 +211,23 @@
             </div>
         </div>
     </div>
+    <div class="popup-image">
+        <span>&times</span>
+        <img src="https://i.stack.imgur.com/d0VYF.png">
+    </div>
 </main>
+<script>
+                document.querySelectorAll('.popup').forEach(image => {
+                    image.onclick = () => {
 
+                        document.querySelector('.popup-image').style.display = 'block';
+                        document.querySelector('.popup-image img').src = image.getAttribute('src')
+                    }
+                })
+                document.querySelector('.popup-image span').onclick = () => {
+                    document.querySelector('.popup-image').style.display = 'none';
+                }
+
+</script>
 </body>
 </html>
