--- a/src/main/resources/templates/question/list.html
+++ b/src/main/resources/templates/question/list.html
@@ -26,7 +26,7 @@
                         <div class="section-title mb-3 clearfix">
                             <div class="h3 font-weight-normal float-left">Questions</div>
                             <a class="float-right btn btn-primary"
-                               th:href="@{/questions/new}">Ask Question</a>
+                               th:href="@{/question/add}">Ask Question</a>
                         </div>
                         <div class="search-form-wrapper mb-3 d-flex justify-content-between">
                             <form class="form" id="question_filter_form" th:action="@{/question}" th:method="get" >
