--- a/src/main/resources/templates/question/withTag.html
+++ b/src/main/resources/templates/question/withTag.html
@@ -25,7 +25,7 @@
                         <div class="section-title mb-3 clearfix">
                             <div class="h3 font-weight-normal float-left" th:text="'QUESTION WITH '+ ${tag.tagName.toUpperCase} + ' TAG'"></div>
                             <a class="float-right btn btn-primary"
-                               th:href="@{/questions/new}">Ask Question</a>
+                               th:href="@{/question/add}">Ask Question</a>
                         </div>
                     </div>
                 </div>
